2010-05-26  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/libs.m4: Allow user to specify glib config explicitly

2010-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* perl/Makefile.am: add libamxfer as a dependency of libamglue

2010-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amtapetype.pl: use force for subsequent runs

2010-05-25  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: close and re-open devices between tests
	* device-src/xfer-dest-device.c: fix memory leak
	* man/xml-source/amtapetype.8.xml: fix -f docs

2010-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndma_cops_backreco.c: Log 'fetch post backup env failed'
	  with level if NDMP9_ILLEGAL_STATE_ERR.

2010-05-21  Dustin J. Mitchell <dustin@zmanda.com>
	* device-src/amtapetype.pl: get the block_size property earlier
	* device-src/device.c: allow property_get after a DEVICE_ERROR

2010-05-21  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Always report "taperflush criteria not met".

2010-05-20  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/Amanda_Changer.pl: test more configs
	* man/xml-source/amanda.conf.5.xml: point users to
	  amanda-changers(7)
	* perl/Amanda/Changer.pm: support either tpchanger or
	  tapedev in changer defs

2010-05-20  Dustin J. Mitchell <dustin@zmanda.com>
	* config/amanda/progs.m4: always use rpcgen
	* ndmp-src/Makefile.am: always build rpc outputs
	* ndmp-src/ndmp0.h ndmp-src/ndmp0_xdr.c ndmp-src/ndmp2.h
	  ndmp-src/ndmp2_xdr.c ndmp-src/ndmp3.h ndmp-src/ndmp3_xdr.c
	  ndmp-src/ndmp4.h ndmp-src/ndmp4_xdr.c ndmp-src/ndmp9.h
	  ndmp-src/ndmp9_xdr.c: remove from version control (and dist)

2010-05-19  Dustin J. Mitchell <dustin@zmanda.com>
	* common-src/fileheader.c: don't print to stderr anymore

2010-05-19  Dustin J. Mitchell <dustin@zmanda.com>
	* ndmp-src/Makefile.am: use BUILT_SOURCES to build rpcgen products
	  first, since they are not solaris-compatible
